manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-php
spec:
  replicas: 3 # Adjust as needed
  selector:
    matchLabels:
      app: demo-php
  template:
    metadata:
      labels:
        app: demo-php
    spec:
      containers:
      - name: demo-php
        image: dmakeroam/demo-php:1.0.0 # Update with your Docker image
        ports:
        - containerPort: 80
        resources: {}
