manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-php
spec:
  selector:
    app: demo-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
